# 3dsoftwarerenderer

./: .clangd  Makefile  README.md  compile_commands.json
src/: .upng.h.swp  CMakeCache.txt  CMakeLists.txt  build.ninja  camera.c  camera.h  clipping.c  clipping.h  cmake_install.cmake  display.c  display.h  light.c  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  sort.c  sort.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
